# Momito

./: .gitignore  AGENTS.MD  AI_COLLAB.md  CLAUDE.md  CONTEXT.md  README.md  REDESIGN_PLAN.MD  Requirement.MD  docker-compose.yml  momito-learning-loop-upgrade.patch  package.json  pnpm-lock.yaml  render.yaml
.agents/: deployment.md  productization.md  security.md  ux-polish.md
.github/workflows/: backup.yml  ci.yml  keepwarm.yml
.swarm/: BOARD.md  CURRENT_STATE_REVIEW.md  DECISIONS.md  HANDOFF.md  LOCKS.md  NEXT_PRODUCT_BRIEF.md  PRODUCTION_ROADMAP.md  PROJECT_BRIEF.md  QA.md  QUALITY_GATE.md  RELEASE_CHECKLIST.md  STARTUP.md
.swarm.bak.20260620-092444/: BOARD.md  DECISIONS.md  HANDOFF.md  LOCKS.md  QA.md  STARTUP.md  agents.env
.swarm.bak.20260620-092444/prompts/: claude.md  codex.md
.swarm/prompts/: claude.md  codex.md
.swarm/queue/: codex_0001781925218543_7f1645f7.msg  codex_0001781925231507_b91ad9cc.msg  codex_0001781925241161_f2253ade.msg  codex_0001781925252498_c7b97698.msg  codex_0001781925424437_5f3f4583.msg  codex_0001781925452122_08457781.msg  codex_0001781925634455_2bd2e1fb.msg  codex_0001781925796063_6b119fb1.msg
apps/api/: .env.example  eslint.config.mjs  (+4 more)
archive/: README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/crawlers/: jobs.py  visa.py
backend/app/models/: __init__.py  dsa.py  job.py  score.py
backend/app/routers/: profile.py
backend/app/services/: pdf_parser.py  scorer.py  suggestion.py
mobile/: App.tsx  app.json  package-lock.json
(+375 files in other folders)
